[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kravets83 <97585334+Kravets83@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
